Fix bug with users repo
